improved getElementName used method overloading for better readability